# multimidi

./: .gitignore  Cargo.toml  openocd.cfg
.cargo/: config
src/: cv.rs  encoder.rs  main.rs  mcp4728.rs  usb_fs.rs
src/midi/: descriptors.rs  device.rs  mod.rs
