[package]
name = "multimidi"
version = "0.1.0"
authors = ["Craig Bishop <craig@craigjb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.8"
cortex-m-rtfm = "0.5.1"
ssd1306 = "0.4.0"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[dependencies.stm32f7xx-hal]
path = "../stm32f7xx-hal"
features = ["stm32f733"]
