[package]
name = "multimidi"
version = "0.1.0"
authors = ["Craig Bishop <craig@craigjb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.8"
cortex-m-rtic = "0.5.3"
ssd1306 = "0.4.0"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
synopsys-usb-otg = { version = "0.2.2", features = ["cortex-m", "fs"] }
usb-device = "0.2.5"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[dependencies.stm32f7xx-hal]
path = "../stm32f7xx-hal"
features = ["stm32f733"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = false # better optimizations